fix overlapping text

--- a/client/app/shared/components/cp-dropdown/cp-dropdown.component.scss
+++ b/client/app/shared/components/cp-dropdown/cp-dropdown.component.scss
@@ -25,8 +25,8 @@
     }
 
     i {
-      top: 8px;
-      right: 12px;
+      top: 2px;
+      right: 8px;
       line-height: 1;
       font-size: 18px;
       position: absolute;
